fix(css, logo, p): #3 fix logo size/syntax, fix paragraph margins on mobile

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -150,7 +150,7 @@
 }
 
 .mt-4 {
-    margin-top: 3rem !important;
+    margin-top: 4rem !important;
 }
 
 .mb-1 {
@@ -165,6 +165,10 @@
     margin-bottom: 3rem !important;
 }
 
+.mb-4 {
+    margin-bottom: 4rem !important;
+}
+
 .mr-1 {
     margin-right: 1rem !important;
 }
@@ -175,6 +179,10 @@
 
 .mr-3 {
     margin-right: 3rem !important;
+}
+
+.mr-4 {
+    margin-right: 4rem !important;
 }
 
 /* PADDINGS */
@@ -195,6 +203,10 @@
     padding-top: 3rem !important;
 }
 
+.pt-4 {
+    padding-top: 4rem !important;
+}
+
 .pb-0 {
     padding-bottom: 0 !important;
 }
@@ -209,6 +221,10 @@
 
 .pb-3 {
     padding-bottom: 3rem !important;
+}
+
+.pb-4 {
+    padding-bottom: 4rem !important;
 }
 
 
