--- a/src/scss/_style-mobile.scss
+++ b/src/scss/_style-mobile.scss
@@ -25,11 +25,6 @@
         padding-top: 3em;
     }
 
-    .wrapper.style4 p,
-    .wrapper.plain p {
-        margin-bottom: 1em;
-    }
-
     .wrapper.style5 img,
     .wrapper.portals img {
         width: 90%;
