--- a/src/scss/_style-normal.scss
+++ b/src/scss/_style-normal.scss
@@ -5,9 +5,9 @@
 @media ( width <= 1280px ) {
 
     #logo {
-        font-size: 0.56em !important;
+        font-size: 100%;
         font-weight: bold;
-        line-height: 7.2em !important;
+        line-height: 4.1em !important;
     }
 
     #banner {
