--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -25,9 +25,14 @@ body, p, li, input, select, textarea {
 
 h1, h2, h3, h4, h5, h6 {
     color: inherit;
+    display: block;
+    font-weight: normal;
     line-height: config.$line-height-headlines;
     margin-bottom: config.$margin-bottom;
-    font-weight: normal;
+}
+
+h1 {
+    font-size: 1.9em;
 }
 
 h2 {
@@ -205,7 +210,7 @@ input[type = "text"] {
 /* Content */
 
 #content {
-    padding-bottom: config.$margin-bottom *2;
+    padding-bottom: config.$margin-bottom * 2;
 }
 
 #content img {
@@ -633,17 +638,15 @@ input[type = "button"].fit,
 
 #logo {
     color: config.$color-nav-text;
+    display: inline-block;
     font-size: 1.8em;
     font-weight: 400;
     letter-spacing: 2px;
     line-height: 2.2em;
-    text-transform: uppercase;
-}
-
-#logo h1 {
-    display: inline-block;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 #nav {
